Trying to solve text-jump problem

--- a/style/main.css
+++ b/style/main.css
@@ -35,7 +35,7 @@
 }
 
 #photo-banner-img {
-    width: 44vw;
+    height: 73vh;
 }
 
 .slogan {
@@ -320,6 +320,7 @@ h3 {
 
     #photo-banner-img {
         width: 455.49px;
+        height: 336.16px;
     }
 
     #horse_gallery_thumbnails {
